try to fix overflow issue where the scrollbar appears when the code is supposed to have a scrollbar in the editor

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,6 +44,10 @@
 .monaco-editor .rename-box {
 	top: 0;
 }
+.monaco-editor.rename-box,
+.monaco-hover {
+	top: 0;
+}
 
 body {
 	@apply bg-gray-900;
